Added link to original code

--- a/fulcrum_io_full_page_embed.html
+++ b/fulcrum_io_full_page_embed.html
@@ -1,4 +1,5 @@
 //Working version of iframe code put embeding a full "Fulcrum" share page into squarespace
+// Original code can be found here: https://help.viostream.com/frequently-asked-questions/how-do-i-make-an-iframe-embed-responsive
 <div id="Container" style="padding-bottom:56.25%; position:relative; display:block; width: 100%">
     <iframe id="preview-frame" width="100%" height="100%"
         src="https://bit.ly/2Zi1z5j" frameborder="0"
